--- a/index.html
+++ b/index.html
@@ -18,8 +18,11 @@
             <p data-testid="currentDayOfTheWeek"></p>
             <p data-testid="currentUTCTime"></p>
             <p data-testid="myTrack">Frontend Development</p>
-            <a href="https://github.com/Ndapat" data-testid="githubURL">Github Repository</a>
     </div>
+
+    <footer>
+        <a href="https://github.com/Ndapat" data-testid="githubURL">Github Repository</a>
+    </footer>
      <!--page ends here-->  
     <script src="./js/main.js"></script>
 </body>
