--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--page starting here-->
     <div class="container">
         <div class="profile">
-            <h1 data-testid="slackUserName">Just_pat</h1>
+            <h1 data-testid="SlackUserName">Just_pat</h1>
             <img src="./assest/FaceApp_1690733846369.jpg" alt="Just_pat" width="30%" data-testid="slackDisplayImage">
         </div>
 
